trans masc specific - formatted and linked up

--- a/pages/index.html
+++ b/pages/index.html
@@ -329,6 +329,7 @@
             </li>
         </ol>
     </li>
+    <!-- TODO: hold up. why are there two sections about periods? --> 
     <li>
         <h3 style="margin: 0px;">
             <a href="./periods.html">
@@ -464,31 +465,45 @@
         </ol>
     </li>
     <li>
-        <h3 style="margin: 0px;">Trans Masc Specific Resources</h3>
+        <h3 style="margin: 0px;">
+            <a href="./trans_masc_resources.html">
+                Trans Masc Specific Resources
+            </a>
+        </h3>
         <ol>
             <li>
                 <h4 style="margin: 0px;">
-                    Binding
+                    <a href="./trans_masc_resources.html#binding">
+                        Binding
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Packing
+                    <a href="./trans_masc_resources.html#packing">
+                        Packing
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    STPs
+                    <a href="./trans_masc_resources.html#stp">
+                        STPs
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Clothing,Shoes,Hair,etc
+                    <a href="./trans_masc_resources.html#general_trans_masc_resources">
+                        Clothing, Shoes, Hair, etc
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Surgery & Grants for funding
+                    <a href="./trans_masc_resources.html#grants_for_trans_mask_surgeries">
+                        Surgery & Grants for funding
+                    </a>
                 </h4>
             </li>
         </ol>
