--- a/index.html
+++ b/index.html
@@ -7,19 +7,6 @@
     </head>
     <body>
 <h1>Worldwide LGBT Resources</h1>
-<p>
-    Disclaimer:
-    This advice is based on our lived experience, we are not doctors/therapists/lawyers/experts.
-    Any products/companies we list don't reflect Trans Academy as a whole. 
-    Please use your own discretion and research with any advice listed. 
-    Always seek the advice of your qualified health care provider regarding any medical questions. 
-</p>
-
-<div style="width:100%; height:1px; background-color:#000000;"></div>
-
-This resource list is for Lgbtqia specific resources. 
-If you would like to add something to this list, please @Pongo on discord. 
-
 
 <h2> Chapters: </h2>
 <ol>
@@ -43,6 +30,7 @@ If you would like to add something to this list, please @Pongo on discord.
                 </li>
             </ol>
             <li>
+                <!-- TODO: those sections don't exist?! -->
                 <h4 style="margin: 0px;">
                     <a href="./server_guide.html">Resources</a> 
                 </h4>
@@ -60,153 +48,368 @@ If you would like to add something to this list, please @Pongo on discord.
         </ol>
     </li>
     <li>
-        <!-- TODO: what was the intent here? becacuse thats not how this things work -->
         <h3 style="margin: 0px;">
-<a href="./Socially Transitioning</h3> 
+            <a href="./social_transitioning.html">
+                Socially Transitioning
+            </a>
+        </h3> 
         <ol> 
-            <li><h4 style="margin: 0px;">Passing</h4></li>
-            <li><h4 style="margin: 0px;">Positivity and Hope</h4></li>
-            <li><h4 style="margin: 0px;">Voice Training</h4></li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./social_transitioning.html#passing">
+                        Passing
+                    </a>
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./social_transitioning.html#positivity_and_hope">
+                        Positivity and Hope
+                    </a>
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./social_transitioning.html#vocal_training">
+                        Voice Training
+                    </a>
+                </h4>
+            </li>
             <ol> 
-                <li><h5 style="margin: 0px;">Trans academy voice classes</h5></li>
-                <li><h5 style="margin: 0px;">Voice training resource list</h5></li>
-                <li><h5 style="margin: 0px;">Voice training app</h5></li>
+                <li>
+                    <!-- TODO: this menu item doesn't make much sense, 
+                        in general: an index update would be needed -->
+                        <h5 style="margin: 0px;">
+                            <a href="./social_transitioning.html#vocal_training">
+                                Trans academy voice classes
+                            </a>
+                        </h5>
+                </li>
+                <li>
+                    <h5 style="margin: 0px;">
+                        <a href="./social_transitioning.html#vocal_training">
+                            Voice training resource list
+                        </a>
+                    </h5>
+                </li>
+                <li>
+                    <h5 style="margin: 0px;">
+                        <a href="./social_transitioning.html#voice_training_apps">
+                            Voice training app
+                        </a>
+                    </h5>
+                </li>
             </ol>
             <li>
                 <h4 style="margin: 0px;">
-                    Navigating Coming Out & Family support
+                    <a href="./social_transitioning.html#comming_out_to_family">
+                        Navigating Coming Out & Family support
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    How to use Pronouns
+                    <a href="./social_transitioning.html#pronoun_use_and_mistakes">
+                        How to use Pronouns
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Support groups & Ally resources
+                    <a href="./social_transitioning.html#guide_for_trans_and_info_for_allies">
+                        Support groups & Ally resources
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Help navigating Homelessness & financial concerns
+                    <a href="./social_transitioning.html#homelessness_and_financials">
+                        Help navigating Homelessness & financial concerns
+                    </a>
                 </h4>
             </li>
             <ol> 
                 <li>
                     <h5 style="margin: 0px;">
-                        Asylum and refugees, worldwide getting to safety
+                        <a href="./social_transitioning.html#worldwide_housing_refugees_and_asylum">
+                            Asylum and refugees, worldwide getting to safety
+                        </a>
                     </h5>
                 </li>
                 <li>
                     <h5 style="margin: 0px;">
-                        LGBT moving funds for safety
+                        <a href="./social_transitioning.html#refugees_and_asylum_to_us">
+                            LGBT moving funds for safety
+                        </a>
                     </h5>
                 </li>
                 <li>
                     <h5 style="margin: 0px;">
-                        Housing
+                        <a href="./social_transitioning.html#us_housing">
+                            Housing
+                        </a>
                     </h5>
                 </li>
                 <li>
                     <h5 style="margin: 0px;">
-                        Youth-runaway crisis lines
+                        <a href="./social_transitioning.html#lgbt_youth_homelessness">
+                            Youth-runaway crisis lines
+                        </a>
                     </h5>
                 </li>
                 <li>
                     <h5 style="margin: 0px;">
-                        Food
+                        <a href="./social_transitioning.html#us_food">
+                            Food
+                        </a>
                     </h5>
                 </li>
                 <li>
                     <h5 style="margin: 0px;">
-                        Wifi and internet access
+                        <a href="./social_transitioning.html#wifi_internet_help">
+                            Wifi and internet access
+                        </a>
                     </h5>
                 </li>
                 <li>
                     <h5 style="margin: 0px;">
-                        How to find low cost health insurance,grants for funding
+                        <a href="./social_transitioning.html#health_insurances">
+                            How to find low cost health insurance, grants for funding
+                        </a>
                     </h5>
                 </li>
                 <li>
                     <h5 style="margin: 0px;">
-                        Job skills, resumes, interviews, College scholarships and more
+                        <a href="./social_transitioning.html#jobs_resumes_and_skill_building">
+                            Job skills, resumes, interviews, College scholarships and more
+                        </a>
                     </h5>
                 </li>
             </ol>
         </ol>
     </li>
     <li>
-        <h3 style="margin: 0px;">Medically Transitioning</h3> 
+        <h3 style="margin: 0px;">
+            <a href="./medically_transitioning.html">
+                Medically Transitioning
+            </a> 
+        </h3> 
         <ol>
+            <!-- TODO: I've trubble finding them in the actual document -->
             <li>
                 <h4 style="margin: 0px;">
-                    HRT - How to guide & safety
+                    <a href="./medically_transitioning.html">
+                        HRT - How to guide & safety
+                    </a> 
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Surgery - Types of procedures, doctors, insurance, grant for funding
+                    <a href="./medically_transitioning.html">
+                        Surgery - Types of procedures, doctors, insurance, grant for funding
+                    </a> 
                 </h4>
+            </li>
+            <!-- TODO: those are mine -->
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./medically_transitioning.html#how_to_injections">
+                        HRT - how to do injections
+                    </a> 
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./medically_transitioning.html#methods_of_hrt">
+                        Methods of HRT
+                    </a> 
+                </h4>
+                <ol>
+                    <li>
+                        <h5 style="margin: 0px;">
+                            <a href="./medically_transitioning.html#hrt_for_trans_masc">
+                                HRT for Trans Masc
+                            </a> 
+                        </h5>
+                    </li>
+                    <li>
+                        <h5 style="margin: 0px;">
+                            <a href="./medically_transitioning.html#hrt_for_trans_fem">
+                                HRT for Trans Fem
+                            </a> 
+                        </h5>
+                    </li>
+                    <li>
+                        <h5 style="margin: 0px;">
+                            <a href="./medically_transitioning.html#hrt_for_nonbinary">
+                                Nonbinary options for HRT
+                            </a> 
+                        </h5>
+                    </li>
+                </ol>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./medically_transitioning.html#surgery">
+                        Surgery
+                    </a> 
+                </h4>
+                <ol>
+                    <li>
+                        <h5 style="margin: 0px;">
+                            <a href="./medically_transitioning.html#affording_surgery">
+                                affording surgery
+                            </a> 
+                        </h5>
+                    </li>
+                    <li>
+                        <h5 style="margin: 0px;">
+                            <a href="./medically_transitioning.html#advice_for_surgery">
+                                Advice for surgery consults
+                            </a> 
+                        </h5>
+                    </li>
+                </ol>
             </li>
         </ol>
     </li>
     <li>
-        <h3 style="margin: 0px;">Finding an LGBT friendly resource</h3>
+        <h3 style="margin: 0px;">
+            <a href="./lgbt_friendly_resources.html">
+                Finding an LGBT friendly resource
+            </a> 
+        </h3>
         <ol>
-            <li><h4 style="margin: 0px;">Doctors & therapists (low income options!)</h4></li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./lgbt_friendly_resources.html#friendly_doctors_and_therapists">
+                        Doctors & therapists (low income options!)
+                    </a> 
+                </h4>
+            </li>
+            <!-- TODO: and where is that business list supposed to be? -->
             <li><h4 style="margin: 0px;">LGBT businesses (Hair salons and more)</h4></li>
         </ol>
     </li>
     <li>
-        <h3 style="margin: 0px;">Transgender Representation</h3>
+        <h3 style="margin: 0px;">
+            <a href="./trans_representation.html">
+                Transgender Representation
+            </a>
+        </h3>
         <ol>
-            <li><h4 style="margin: 0px;">Trans masc</h4></li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./trans_representation.html#creators_trans_masc">
+                        Trans masc
+                    </a>
+                </h4>
+            </li>
             <ol>
-                <li><h5 style="margin: 0px;">Trace app for tracking transition</h5></li>
+                <li>
+                    <h5 style="margin: 0px;">
+                        <a href="./trans_representation.html#aydian_dowling">
+                            Trace app for tracking transition
+                        </a>
+                    </h5>
+                </li>
             </ol>
             <li>
                 <h4 style="margin: 0px;">
-                    Trans fem
+                    <a href="./trans_representation.html#creators_trans_fem">
+                        Trans fem
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Nonbinary
+                    <a href="./trans_representation.html#creators_nonbinary">
+                        Nonbinary
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Books on lgbt, books for kids
+                    <a href="./trans_representation.html#books_lgbt_kids">
+                        Books on lgbt, books for kids
+                    </a>
+                </h4>
+            </li>
+        </ol>
+    </li>
+    <!-- TODO: hold up. why are there two sections about periods? --> 
+    <li>
+        <h3 style="margin: 0px;">
+            <a href="./periods.html">
+                Periods - monthly cycle
+            </a>
+        </h3>
+        <ol>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./periods.html#trans_gynecology">
+                        Period tracking app, OBGYNs
+                    </a>
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./periods.html#trans_masc_periods">
+                        Trans masc cycles
+                    </a>
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./periods.html#trans_fem_periods">
+                        Trans fem have periods too!
+                    </a>
                 </h4>
             </li>
         </ol>
     </li>
     <li>
-        <h3 style="margin: 0px;">Periods - monthly cycle</h3>
+        <h3 style="margin: 0px;">
+            <a href="./legal_help_for_lgbt.html">
+                Legal Help for LGBT
+            </a> 
+        </h3>
         <ol>
             <li>
                 <h4 style="margin: 0px;">
-                    Period tracking app, OBGYNs
+                    <a href="./legal_help_for_lgbt.html#legal_us">
+                        US
+                    </a> 
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Trans masc cycles
+                    <a href="./legal_help_for_lgbt.html#legal_us_name_change">
+                        Name & gender marker change in the US
+                    </a> 
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Trans fem have periods too!
+                    <a href="./legal_help_for_lgbt.html#legal_uk">
+                        UK
+                    </a> 
                 </h4>
             </li>
-        </ol>
-    </li>
-    <li>
-        <h3 style="margin: 0px;">Legal Help for LGBT</h3>
-        <ol>
-            <li><h4 style="margin: 0px;">US and name & gender marker change</h4></li>
-            <li><h4 style="margin: 0px;">UK,Canada and more countries</h4></li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./legal_help_for_lgbt.html#legal_ca">
+                        Canada
+                    </a> 
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./legal_help_for_lgbt.html#legal_world">
+                        Other countries
+                    </a> 
+                </h4>
+            </li>
         </ol>
     </li>
     <li>
@@ -270,31 +473,45 @@ If you would like to add something to this list, please @Pongo on discord.
         </ol>
     </li>
     <li>
-        <h3 style="margin: 0px;">Trans Masc Specific Resources</h3>
+        <h3 style="margin: 0px;">
+            <a href="./trans_masc_resources.html">
+                Trans Masc Specific Resources
+            </a>
+        </h3>
         <ol>
             <li>
                 <h4 style="margin: 0px;">
-                    Binding
+                    <a href="./trans_masc_resources.html#binding">
+                        Binding
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Packing
+                    <a href="./trans_masc_resources.html#packing">
+                        Packing
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    STPs
+                    <a href="./trans_masc_resources.html#stp">
+                        STPs
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Clothing,Shoes,Hair,etc
+                    <a href="./trans_masc_resources.html#general_trans_masc_resources">
+                        Clothing, Shoes, Hair, etc
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Surgery & Grants for funding
+                    <a href="./trans_masc_resources.html#grants_for_trans_mask_surgeries">
+                        Surgery & Grants for funding
+                    </a>
                 </h4>
             </li>
         </ol>
@@ -457,7 +674,16 @@ If you would like to add something to this list, please @Pongo on discord.
 <div style="border-style: solid; boder-width: 1%"></div>
 <p style="text-align: center;">
     Want to add something here? <br>
-    Let @Pongo | <code>awtterpaws_26</code> know on Discord!
+    Let @Pongo | <code>awtterpaws_26</code> know on Discord! <br>
+    Technical difficulties? <br>
+    Let @Add | <code>add_gaming</code> know on Discord!
+</p>
+<p style="text-align: center;">
+    Disclaimer: <br>
+    This advice is based on our lived experience, we are not doctors/therapists/lawyers/experts.
+    Any products/companies we list don't reflect Trans Academy as a whole. 
+    Please use your own discretion and research with any advice listed. 
+    Always seek the advice of your qualified health care provider regarding any medical questions. 
 </p>
     </body>
 </html>
