--- a/trans_fem_resources.html
+++ b/trans_fem_resources.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
     <head>
-        <title>My First Web Page</title>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg" href="./img/favicon.svg" />
+        <title>Worldwide Trans Resources</title>
     </head>
     <body>
 <p>
@@ -134,7 +136,16 @@
 <div style="border-style: solid; boder-width: 1%"></div>
 <p style="text-align: center;">
     Want to add something here? <br>
-    Let @Pongo | <code>awtterpaws_26</code> know on Discord!
+    Let @Pongo | <code>awtterpaws_26</code> know on Discord! <br>
+    Technical difficulties? <br>
+    Let @Add | <code>add_gaming</code> know on Discord!
+</p>
+<p style="text-align: center;">
+    Disclaimer: <br>
+    This advice is based on our lived experience, we are not doctors/therapists/lawyers/experts.
+    Any products/companies we list don't reflect Trans Academy as a whole. 
+    Please use your own discretion and research with any advice listed. 
+    Always seek the advice of your qualified health care provider regarding any medical questions. 
 </p>
     </body>
 </html>
