--- a/lgbt_friendly_resources.html
+++ b/lgbt_friendly_resources.html
@@ -1,122 +1,193 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
     <head>
-        <title>My First Web Page</title>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg" href="./img/favicon.svg" />
+        <title>Worldwide Trans Resources</title>
     </head>
     <body>
+<h1>Finding an LGBT friendly resource</h1>
+
+<h2 id="friendly_doctors_and_therapists">
+    Where can I find an LGBT friendly doctor or therapist?
+</h2> 
+
 <p>
-    Where can I find an LGBT friendly doctor or  therapist? 
+    <i>
+        <a href="./legal_help_for_lgbt.html">
+            *Worldwide Crisis lines are here*
+        </a>
+    </i> 
 </p>
-<p>
-    <i>*Worldwide Crisis lines at the top of document*</i> 
-</p>
-<p>
-    Worldwide map for LGBT friendly businesses https://www.everywhereisqueer.com/map
-</p>
-<p>
-    Worldwide Therapist Search  https://www.psychologytoday.com/us/therapists<br>
-    Select *more* click “LGBT”, or select *issue* click “transgender”
-</p>
-<p>
-    US therapists: Need a more affordable therapy option for around $30usd or more? <br>
-    <a href="https://openpathcollective.org">https://openpathcollective.org</a>
-</p>
-<p>
-    US therapy grants: <a href="https://nqttcn.com/en/mental-health-fund/">https://nqttcn.com/en/mental-health-fund/</a> 
-</p>
-<p>
-    <b>Germany:</b>
-    <ul>
-        <li>
-            Lgbt therapists directory: <a href="https://queermed-deutschland.de/en/">https://queermed-deutschland.de/en/</a>
-        </li>
-        <li>
-            Therapists directory: <a href="https://www.lgbtqandall.com/resources/mental-health/europe/germany/berlin/">
-                https://www.lgbtqandall.com/resources/mental-health/europe/germany/berlin/
-            </a>
-        </li>
-        <li>
-            International therapist map: <a href="https://internationaltherapistdirectory.com/location/germany-1/">
-                https://internationaltherapistdirectory.com/location/germany-1/
-            </a>
-        </li>
-    </ul>
-</p>
-<p>
-_____________________________________________________________
-</p>
-<p>
-    <b>Erin’s informed consent doctors worldwide map: </b><br>
-    <a href="https://www.google.com/maps/d/u/0/viewer?mid=1DxyOTw8dI8n96BHFF2JVUMK7bXsRKtzA&hl=en_US&fbclid=IwAR1jIX9jDjYvU1MthjAymNw0QBcywO0RChGI8E13UfcoJwweaauI9uqp-6Q&ll=38.53652162688942%2C-102.18971259900887&z=6">
-        https://www.google.com/maps/
-    </a>
-</p>
-<p>
-    <b>US resources:</b>
-    <ul>
-        <li>
-            Help moving & housing, finding hrt, and more: <a href="https://rainbowpassage.org/intake">https://rainbowpassage.org/intake</a>
-        </li>
-        <li>
-            US doctors: <a href="https://lgbtqhealthcaredirectory.org">https://lgbtqhealthcaredirectory.org</a>
-        </li>
-        <li>
-            Lgbt HRT company for online prescriptions: <a href="https://getplume.co">https://getplume.co</a>
-        </li>
-        <li>
-            US LGBT directory: <a href="https://www.lgbtnearme.org">https://www.lgbtnearme.org</a>
-        </li>
-        <li>
-            US Southern States directory for doctors: <a href="https://southernequality.org/resources/transinthesouth/">https://southernequality.org/resources/transinthesouth/</a>
-        </li>
-    </ul>
-</p>
-<p>
-    <b>UK resources:</b> <br>
-    <ul>
-        <li>
-            Doctors: https://www.transhealthcareintel.com/trans-friendly-gps
-        </li>
-        <li>
-    Trans friendly UK doctors: https://docs.google.com/spreadsheets/d/1b5SSnb7LBUlWSjasN2ld7qPGmEchgDG8voUY-SkfAlw/edit#gid=0
-        </li>
-    </ul>
-</p>
-<p>
-    LGBT medical support 
-    <a href="https://www.bma.org.uk/advice-and-support/equality-and-diversity-guidance/lgbtplus-equality-in-medicine/lgbtqplus-equality-in-medicine">
-        https://www.bma.org.uk/advice-and-support/equality-and-diversity-guidance/lgbtplus-equality-in-medicine/lgbtqplus-equality-in-medicine
-    </a> 
-</p>
-<p>
-    Canada: <br>
-    <ul>
-        <li>
-            Health clinics:<a href="https://www.rainbowhealthontario.ca/2slgbtq-health-resources/">https://www.rainbowhealthontario.ca/2slgbtq-health-resources/</a> 
-        </li>
-        <li>
-            Informed Consent clinic Ontario:<a href="https://guelphchc.ca">https://guelphchc.ca</a> 
-        </li>
-    </ul>
-</p>
-<p>
-    Germany: <br>
-    <ul>
-        <li>
-            medical,hrt,legal,etc: <a href="https://schwulenberatungberlin.de/transitioning-in-berlin/">https://schwulenberatungberlin.de/transitioning-in-berlin/</a>:
-        </li>
-        <li>
-            Find a doctor near you:<a href="https://queermed-deutschland.de/en/look-for-recommendations/">https://queermed-deutschland.de/en/look-for-recommendations/</a> 
-        </li>
-    </ul>
-</p>
-<p>
-    _____________________________________________________________________________
-</p>
+
+<ul>
+    <li>
+        <b>Worldwide map</b> for LGBT friendly businesses 
+        <a href="https://www.everywhereisqueer.com/map">
+            https://www.everywhereisqueer.com/map
+        </a> 
+    </li>
+    <li>
+        <b>Worldwide Therapist</b> Search 
+        <a href="https://www.psychologytoday.com/us/therapists">
+            https://www.psychologytoday.com/us/therapists
+        </a><br>
+        Select <i>*more*</i> click “LGBT”, 
+        or select <i>*issue*</i> click “<i>transgender</i>”
+    </li>
+    <li>
+        <b>US therapists</b>: 
+        Need a more affordable therapy option for around $30usd or more? <br>
+        <a href="https://openpathcollective.org">
+            https://openpathcollective.org
+        </a>
+    </li>
+    <li>
+        <b>US</b> therapy grants: 
+        <a href="https://nqttcn.com/en/mental-health-fund/">
+            https://nqttcn.com/en/mental-health-fund/
+        </a> 
+    </li>
+    <li>
+        <b>Germany:</b>
+        <ul>
+            <li>
+                Lgbt therapists directory: 
+                <a href="https://queermed-deutschland.de/en/">
+                    https://queermed-deutschland.de/en/
+                </a>
+            </li>
+            <li>
+                Therapists directory: 
+                <a href="https://www.lgbtqandall.com/resources/mental-health/europe/germany/berlin/">
+                    https://www.lgbtqandall.com/resources/mental-health/europe/germany/berlin/
+                </a>
+            </li>
+            <li>
+                International therapist map: 
+                <a href="https://internationaltherapistdirectory.com/location/germany-1/">
+                    https://internationaltherapistdirectory.com/location/germany-1/
+                </a>
+            </li>
+        </ul>
+    </li>
+</ul>
+
+<div style="width:100%; height:1px; background-color:#000000;"></div>
+<!-- hot does this second listing differ from the one above? -->
+<ul>
+    <li>
+        <b>Erin’s informed consent doctors worldwide map: </b><br>
+        <a href="https://www.google.com/maps/d/u/0/viewer?mid=1DxyOTw8dI8n96BHFF2JVUMK7bXsRKtzA&hl=en_US&fbclid=IwAR1jIX9jDjYvU1MthjAymNw0QBcywO0RChGI8E13UfcoJwweaauI9uqp-6Q&ll=38.53652162688942%2C-102.18971259900887&z=6">
+            https://www.google.com/maps/
+        </a>
+    </li>
+    <li>
+        <b>US resources:</b>
+        <ul>
+            <li>
+                Help moving & housing, finding hrt, and more: 
+                <a href="https://rainbowpassage.org/intake">
+                    https://rainbowpassage.org/intake
+                </a>
+            </li>
+            <li>
+                US doctors: 
+                <a href="https://lgbtqhealthcaredirectory.org">
+                    https://lgbtqhealthcaredirectory.org
+                </a>
+            </li>
+            <li>
+                Lgbt HRT company for online prescriptions: 
+                <a href="https://getplume.co">
+                    https://getplume.co
+                </a>
+            </li>
+            <li>
+                US LGBT directory: 
+                <a href="https://www.lgbtnearme.org">
+                    https://www.lgbtnearme.org
+                </a>
+            </li>
+            <li>
+                US Southern States directory for doctors: 
+                <a href="https://southernequality.org/resources/transinthesouth/">
+                    https://southernequality.org/resources/transinthesouth/
+                </a>
+            </li>
+        </ul>
+    </li>
+    <li>
+        <b>UK resources:</b>
+        <ul>
+            <li>
+                Doctors:
+                <a href="https://www.transhealthcareintel.com/trans-friendly-gps">
+                    https://www.transhealthcareintel.com/trans-friendly-gps
+                </a> 
+            </li>
+            <li>
+                Trans friendly UK doctors: 
+                <a href="https://docs.google.com/spreadsheets/d/1b5SSnb7LBUlWSjasN2ld7qPGmEchgDG8voUY-SkfAlw/edit#gid=0">
+                    https://docs.google.com/spreadsheets/
+                </a> 
+            </li>
+            <li>
+                LGBT medical support 
+                <a href="https://www.bma.org.uk/advice-and-support/equality-and-diversity-guidance/lgbtplus-equality-in-medicine/lgbtqplus-equality-in-medicine">
+                    https://www.bma.org.uk/advice-and-support/equality-and-diversity-guidance/lgbtplus-equality-in-medicine/lgbtqplus-equality-in-medicine
+                </a> 
+            </li>
+        </ul>
+    </li>
+    <li>
+        <b>Canada:</b>
+        <ul>
+            <li>
+                Health clinics:
+                <a href="https://www.rainbowhealthontario.ca/2slgbtq-health-resources/">
+                    https://www.rainbowhealthontario.ca/2slgbtq-health-resources/
+                </a> 
+            </li>
+            <li>
+                Informed Consent clinic Ontario:
+                <a href="https://guelphchc.ca">
+                    https://guelphchc.ca
+                </a> 
+            </li>
+        </ul>
+    </li>
+    <li>
+        <b>Germany:</b> <br>
+        <ul>
+            <li>
+                medical, hrt, legal, etc: 
+                <a href="https://schwulenberatungberlin.de/transitioning-in-berlin/">
+                    https://schwulenberatungberlin.de/transitioning-in-berlin/
+                </a>:
+            </li>
+            <li>
+                Find a doctor near you:
+                <a href="https://queermed-deutschland.de/en/look-for-recommendations/">
+                    https://queermed-deutschland.de/en/look-for-recommendations/
+                </a> 
+            </li>
+        </ul>
+    </li>
+</ul>
 <div style="border-style: solid; boder-width: 1%"></div>
 <p style="text-align: center;">
     Want to add something here? <br>
-    Let @Pongo | <code>awtterpaws_26</code> know on Discord!
+    Let @Pongo | <code>awtterpaws_26</code> know on Discord! <br>
+    Technical difficulties? <br>
+    Let @Add | <code>add_gaming</code> know on Discord!
+</p>
+<p style="text-align: center;">
+    Disclaimer: <br>
+    This advice is based on our lived experience, we are not doctors/therapists/lawyers/experts.
+    Any products/companies we list don't reflect Trans Academy as a whole. 
+    Please use your own discretion and research with any advice listed. 
+    Always seek the advice of your qualified health care provider regarding any medical questions. 
 </p>
     </body>
 </html>
