talked about todos

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h2> Chapters: </h2>
 <ol>
     <li>
-        <!-- TODO: name of this section -->
+        <h3> Mental Health </h3>
         <ol>
             <li>
                 <h4 style="margin: 0px;">
@@ -29,22 +29,6 @@
                     </h5>
                 </li>
             </ol>
-            <li>
-                <!-- TODO: those sections don't exist?! -->
-                <h4 style="margin: 0px;">
-                    <a href="./server_guide.html">Resources</a> 
-                </h4>
-            </li>
-            <li>
-                <h4 style="margin: 0px;">
-                    <a href="./server_guide.html">Voice Training</a> 
-                </h4>
-            </li>
-            <li>
-                <h4 style="margin: 0px;">
-                    <a href="./server_guide.html">Classes & Events</a> 
-                </h4>
-            </li>
         </ol>
     </li>
     <li>
@@ -77,8 +61,7 @@
             </li>
             <ol> 
                 <li>
-                    <!-- TODO: this menu item doesn't make much sense, 
-                        in general: an index update would be needed -->
+                    <!-- TODO: Syncronize menu items -->
                         <h5 style="margin: 0px;">
                             <a href="./social_transitioning.html#vocal_training">
                                 Trans academy voice classes
@@ -195,22 +178,6 @@
             </a> 
         </h3> 
         <ol>
-            <!-- TODO: I've trubble finding them in the actual document -->
-            <li>
-                <h4 style="margin: 0px;">
-                    <a href="./medically_transitioning.html">
-                        HRT - How to guide & safety
-                    </a> 
-                </h4>
-            </li>
-            <li>
-                <h4 style="margin: 0px;">
-                    <a href="./medically_transitioning.html">
-                        Surgery - Types of procedures, doctors, insurance, grant for funding
-                    </a> 
-                </h4>
-            </li>
-            <!-- TODO: those are mine -->
             <li>
                 <h4 style="margin: 0px;">
                     <a href="./medically_transitioning.html#how_to_injections">
@@ -283,12 +250,10 @@
             <li>
                 <h4 style="margin: 0px;">
                     <a href="./lgbt_friendly_resources.html#friendly_doctors_and_therapists">
-                        Doctors & therapists (low income options!)
+                        Doctors, Therapists, Businesses
                     </a> 
                 </h4>
             </li>
-            <!-- TODO: and where is that business list supposed to be? -->
-            <li><h4 style="margin: 0px;">LGBT businesses (Hair salons and more)</h4></li>
         </ol>
     </li>
     <li>
@@ -332,37 +297,6 @@
                 <h4 style="margin: 0px;">
                     <a href="./trans_representation.html#books_lgbt_kids">
                         Books on lgbt, books for kids
-                    </a>
-                </h4>
-            </li>
-        </ol>
-    </li>
-    <!-- TODO: hold up. why are there two sections about periods? --> 
-    <li>
-        <h3 style="margin: 0px;">
-            <a href="./periods.html">
-                Periods - monthly cycle
-            </a>
-        </h3>
-        <ol>
-            <li>
-                <h4 style="margin: 0px;">
-                    <a href="./periods.html#trans_gynecology">
-                        Period tracking app, OBGYNs
-                    </a>
-                </h4>
-            </li>
-            <li>
-                <h4 style="margin: 0px;">
-                    <a href="./periods.html#trans_masc_periods">
-                        Trans masc cycles
-                    </a>
-                </h4>
-            </li>
-            <li>
-                <h4 style="margin: 0px;">
-                    <a href="./periods.html#trans_fem_periods">
-                        Trans fem have periods too!
                     </a>
                 </h4>
             </li>
@@ -671,10 +605,11 @@
 </ol>
 
 
-<div style="border-style: solid; boder-width: 1%"></div>
+<div style="border-style: solid; boder-width: 1%"></div
+
 <p style="text-align: center;">
     Want to add something here? <br>
-    Let @Pongo | <code>awtterpaws_26</code> know on Discord! <br>
+    Let @Pongo | <code>worldwidelgbtresources@gmail.com</code> <br>
     Technical difficulties? <br>
     Let @Add | <code>add_gaming</code> know on Discord!
 </p>
