--- a/nonbinary_and_intersex_resources.html
+++ b/nonbinary_and_intersex_resources.html
@@ -16,10 +16,11 @@
     </p>
     More coming Soon….. Please suggest things to @pongo. <br>
 </p>
-<div style="border-style: solid; boder-width: 1%"></div>
+<div style="border-style: solid; boder-width: 1%"></div
+
 <p style="text-align: center;">
     Want to add something here? <br>
-    Let @Pongo | <code>awtterpaws_26</code> know on Discord! <br>
+    Let @Pongo | <code>worldwidelgbtresources@gmail.com</code> <br>
     Technical difficulties? <br>
     Let @Add | <code>add_gaming</code> know on Discord!
 </p>
