--- a/pages/general_lgbt_organizations.html
+++ b/pages/general_lgbt_organizations.html
@@ -20,21 +20,23 @@
 </p>
 <p>
     Grant for gender affirming items (youth in southern states, 24 or younger):  <br>
-    <a href="https://wearefamilycharleston.org/tgncapplication">https://wearefamilycharleston.org/tgncapplication</a> 
+    <a href="https://wearefamilycharleston.org/tgncapplication">wearefamilycharleston.org</a> 
 </p>
 <p>
     Organizations by state:<a href="https://marshap.org">https://marshap.org</a> 
 </p>
 
-<!-- TODO: change this header to EUW? --> 
-<h3 id="lgbt_orgs_by_country_uk">UK</h3>
+
+<h3 id="lgbt_orgs_by_country_eu">Europe</h3>
 
 <p>
     <a href="https://jsis.washington.edu/euwesteurope/cideu-civil-society-inclusion-and-diversity-in-the-european-union/member-state-civil-society-resources/civil-society-organizations-lgbtq/">
         jsis.washington.edu//cideu-civil-society-inclusion-and-diversity-in-the-european-union/
     </a> 
-    (europe,uk,beligum,germany,ireland,etc)
+    (europe, uk, beligum, germany, ireland, etc)
 </p>
+
+<h4 id="lgbt_orgs_by_country_uk">UK</h4>
 <p>
     Transactual:  <br>
     <a href="https://transactual.org.uk">https://transactual.org.uk</a> <br>
