--- a/pages/medically_transitioning.html
+++ b/pages/medically_transitioning.html
@@ -49,8 +49,7 @@
             Intramuscular injection: <a href="https://www.youtube.com/watch?v=FgCCO9Gqt1Q">https://www.youtube.com/watch?v=FgCCO9Gqt1Q</a><br>
         </li>
         <li>
-            <!-- TODO: is the timestamp on purpose? -->
-            Subcutaneous Injection: <a href="https://www.youtube.com/watch?v=DJd02xCNNc0&t=54s">https://www.youtube.com/watch?v=DJd02xCNNc0&t=54s</a><br>
+            Subcutaneous Injection: <a href="https://www.youtube.com/watch?v=DJd02xCNNc0">https://www.youtube.com/watch?v=DJd02xCNNc0</a><br>
         </li>
     </ul>
     <b>Follow your doctor’s instructions on your vile, ask your doctor which method is best.</b>
@@ -156,7 +155,7 @@
 
 <h3 id="affording_surgery">Affording surgery</h3>
 <p>
-    <!-- TODO: which one -->
+    <!-- TODO: Link: Experiencing homelessness - How to find health ensurance -->
     <i>* see our insurance section</i> <br>
 </p>
 
