--- a/pages/server_guide.html
+++ b/pages/server_guide.html
@@ -210,6 +210,8 @@
     <i>I'm not a therapist, please see a medical professional for proper care</i>
 </p>
 
+<img scr="./img/grounding-technique.png">
+
 <h4>Grounding DBT technique my therapist gave me, "54321"</h4> 
 
 <p>
