--- a/server_guide.html
+++ b/server_guide.html
@@ -218,6 +218,8 @@
     <i>I'm not a therapist, please see a medical professional for proper care</i>
 </p>
 
+<img scr="./img/grounding-technique.png">
+
 <h4>Grounding DBT technique my therapist gave me, "54321"</h4> 
 
 <p>
@@ -245,10 +247,11 @@
 </p>
 <b> *I'm not a therapist, please see a medical professional </b>
 
-<div style="border-style: solid; boder-width: 1%"></div>
+<div style="border-style: solid; boder-width: 1%"></div
+
 <p style="text-align: center;">
     Want to add something here? <br>
-    Let @Pongo | <code>awtterpaws_26</code> know on Discord! <br>
+    Let @Pongo | <code>worldwidelgbtresources@gmail.com</code> <br>
     Technical difficulties? <br>
     Let @Add | <code>add_gaming</code> know on Discord!
 </p>
