--- a/social_transitioning.html
+++ b/social_transitioning.html
@@ -85,7 +85,6 @@
 </p>
 <p>
     Also here's a list for more voice help: <br>
-    <!-- TODO: shoudn't we use more discriptive link names? -->
     <a href="https://docs.google.com/document/d/1d_fVzgA93pLOw767n6Zi3eJW0FpDn7MR31RT0bnIt8w/edit">
         https://docs.google.com/document/d/1d_fVzgA93pLOw767n6Zi3eJW0FpDn7MR31RT0bnIt8w/edit
     </a>
@@ -348,7 +347,6 @@
     </li>
 </ul>
 
-<!-- TODO: should we split this off into a dedicated section? Expecially the job stuff -->
 <h2 id="homelessness_and_financials">Experiencing risk of homelessness, lack of food, or other financial needs?</h2>
 
 <h3 id="worldwide_housing_refugees_and_asylum">Worldwide Help for safe housing (refugees and asylum seekers)</h3>
@@ -384,8 +382,7 @@
 
 <ul>
     <li>
-        <!-- TODO: is this a typo? -->
-        Trans Refugees moving to Los Vegas: 
+        Trans Refugees moving to Las Vegas: 
         <a href="https://www.aplaceformarshaofficial.org">
             https://www.aplaceformarshaofficial.org
         </a>
@@ -910,10 +907,11 @@
         </li>
     </ul>
 </p>
-<div style="border-style: solid; boder-width: 1%"></div>
+<div style="border-style: solid; boder-width: 1%"></div
+
 <p style="text-align: center;">
     Want to add something here? <br>
-    Let @Pongo | <code>awtterpaws_26</code> know on Discord! <br>
+    Let @Pongo | <code>worldwidelgbtresources@gmail.com</code> <br>
     Technical difficulties? <br>
     Let @Add | <code>add_gaming</code> know on Discord!
 </p>
