--- a/general_lgbt_organizations.html
+++ b/general_lgbt_organizations.html
@@ -28,21 +28,23 @@
 </p>
 <p>
     Grant for gender affirming items (youth in southern states, 24 or younger):  <br>
-    <a href="https://wearefamilycharleston.org/tgncapplication">https://wearefamilycharleston.org/tgncapplication</a> 
+    <a href="https://wearefamilycharleston.org/tgncapplication">wearefamilycharleston.org</a> 
 </p>
 <p>
     Organizations by state:<a href="https://marshap.org">https://marshap.org</a> 
 </p>
 
-<!-- TODO: change this header to EUW? --> 
-<h3 id="lgbt_orgs_by_country_uk">UK</h3>
+
+<h3 id="lgbt_orgs_by_country_eu">Europe</h3>
 
 <p>
     <a href="https://jsis.washington.edu/euwesteurope/cideu-civil-society-inclusion-and-diversity-in-the-european-union/member-state-civil-society-resources/civil-society-organizations-lgbtq/">
         jsis.washington.edu//cideu-civil-society-inclusion-and-diversity-in-the-european-union/
     </a> 
-    (europe,uk,beligum,germany,ireland,etc)
+    (europe, uk, beligum, germany, ireland, etc)
 </p>
+
+<h4 id="lgbt_orgs_by_country_uk">UK</h4>
 <p>
     Transactual:  <br>
     <a href="https://transactual.org.uk">https://transactual.org.uk</a> <br>
@@ -156,10 +158,11 @@
         </li>
     </ul>
 </p>
-<div style="border-style: solid; boder-width: 1%"></div>
+<div style="border-style: solid; boder-width: 1%"></div
+
 <p style="text-align: center;">
     Want to add something here? <br>
-    Let @Pongo | <code>awtterpaws_26</code> know on Discord! <br>
+    Let @Pongo | <code>worldwidelgbtresources@gmail.com</code> <br>
     Technical difficulties? <br>
     Let @Add | <code>add_gaming</code> know on Discord!
 </p>
