--- a/legal_help_for_lgbt.html
+++ b/legal_help_for_lgbt.html
@@ -130,10 +130,11 @@
         https://immigrationequality.org/legal/legal-help/
     </a> 
 </p>
-<div style="border-style: solid; boder-width: 1%"></div>
+<div style="border-style: solid; boder-width: 1%"></div
+
 <p style="text-align: center;">
     Want to add something here? <br>
-    Let @Pongo | <code>awtterpaws_26</code> know on Discord! <br>
+    Let @Pongo | <code>worldwidelgbtresources@gmail.com</code> <br>
     Technical difficulties? <br>
     Let @Add | <code>add_gaming</code> know on Discord!
 </p>
