--- a/medically_transitioning.html
+++ b/medically_transitioning.html
@@ -57,8 +57,7 @@
             Intramuscular injection: <a href="https://www.youtube.com/watch?v=FgCCO9Gqt1Q">https://www.youtube.com/watch?v=FgCCO9Gqt1Q</a><br>
         </li>
         <li>
-            <!-- TODO: is the timestamp on purpose? -->
-            Subcutaneous Injection: <a href="https://www.youtube.com/watch?v=DJd02xCNNc0&t=54s">https://www.youtube.com/watch?v=DJd02xCNNc0&t=54s</a><br>
+            Subcutaneous Injection: <a href="https://www.youtube.com/watch?v=DJd02xCNNc0">https://www.youtube.com/watch?v=DJd02xCNNc0</a><br>
         </li>
     </ul>
     <b>Follow your doctor’s instructions on your vile, ask your doctor which method is best.</b>
@@ -164,7 +163,7 @@
 
 <h3 id="affording_surgery">Affording surgery</h3>
 <p>
-    <!-- TODO: which one -->
+    <!-- TODO: Link: Experiencing homelessness - How to find health ensurance -->
     <i>* see our insurance section</i> <br>
 </p>
 
@@ -271,10 +270,11 @@
     <!-- missing link -->
     Felix’s Top surgery guide (can be used in general for most surgeries)
 </p>
-<div style="border-style: solid; boder-width: 1%"></div>
+<div style="border-style: solid; boder-width: 1%"></div
+
 <p style="text-align: center;">
     Want to add something here? <br>
-    Let @Pongo | <code>awtterpaws_26</code> know on Discord! <br>
+    Let @Pongo | <code>worldwidelgbtresources@gmail.com</code> <br>
     Technical difficulties? <br>
     Let @Add | <code>add_gaming</code> know on Discord!
 </p>
