--- a/pages/social_transitioning.html
+++ b/pages/social_transitioning.html
@@ -77,7 +77,6 @@
 </p>
 <p>
     Also here's a list for more voice help: <br>
-    <!-- TODO: shoudn't we use more discriptive link names? -->
     <a href="https://docs.google.com/document/d/1d_fVzgA93pLOw767n6Zi3eJW0FpDn7MR31RT0bnIt8w/edit">
         https://docs.google.com/document/d/1d_fVzgA93pLOw767n6Zi3eJW0FpDn7MR31RT0bnIt8w/edit
     </a>
@@ -340,7 +339,6 @@
     </li>
 </ul>
 
-<!-- TODO: should we split this off into a dedicated section? Expecially the job stuff -->
 <h2 id="homelessness_and_financials">Experiencing risk of homelessness, lack of food, or other financial needs?</h2>
 
 <h3 id="worldwide_housing_refugees_and_asylum">Worldwide Help for safe housing (refugees and asylum seekers)</h3>
@@ -376,8 +374,7 @@
 
 <ul>
     <li>
-        <!-- TODO: is this a typo? -->
-        Trans Refugees moving to Los Vegas: 
+        Trans Refugees moving to Las Vegas: 
         <a href="https://www.aplaceformarshaofficial.org">
             https://www.aplaceformarshaofficial.org
         </a>
