--- a/pages/trans_representation.html
+++ b/pages/trans_representation.html
@@ -5,7 +5,7 @@
 <h2 id="creators_trans_fem">Trans fem creators</h2>
 
 <ul>
-    <!-- TODO: are there any requirenments? where are contrapoints, mia mulder, jessy early, philosophy tube, ...? -->
+    <!-- TODO: contrapoints, mia mulder, jessy early, philosophy tube, ...? -->
     <li>
         Laverne Cox:
         <a href="https://www.instagram.com/lavernecox/">
@@ -164,15 +164,12 @@
     </li>
 </ul>
 
-<!-- TODO: should the legible information include all the details to find the book in book stores, or should we stick to just a link and title? -->
-<!-- TODO: update amanzon links to "real links" instead of browser copy -->
-
 <h2 id="books_LGBT">Books about LGBT</h2>
 
 <ul>
     <li>
         <a href="https://www.amazon.com/Trans-Bodies-Selves-Transgender-Communities/dp/0190092726/ref=d_pd_sbs_vft_none_sccl_2_5/143-3770184-9337616?psc=1">
-            Trans Bodies,Trans Selves by:Laura Erickson-Schroth
+            Trans Bodies, Trans Selves by: Laura Erickson-Schroth
         </a>
     </li>
     <li>
