renamed server_guide to mental_health

--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
 <h2> Chapters: </h2>
 <ol>
     <li>
-        <h3> Mental Health </h3>
+        <h3> 
+            <a href="./mental_health.html">
+                Mental Health
+            </a>
+        </h3>
         <ol>
             <li>
                 <h4 style="margin: 0px;">
-                    <a href="./server_guide.html#crisis_hotlines">
+                    <a href="./mental_health.html#crisis_hotlines">
                         Crisis Hotlines
                     </a>
                 </h4>
@@ -23,7 +27,7 @@
             <ol> 
                 <li>
                     <h5 style="margin: 0px;">
-                        <a href="./server_guide.html#basic_coping_skills">
+                        <a href="./mental_health.html#basic_coping_skills">
                             Coping skills
                         </a>
                     </h5>
