--- a/mental_health.html
+++ b/mental_health.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg" href="./img/favicon.svg" />
+        <title>Worldwide Trans Resources</title>
+    </head>
+    <body>
+<h1> Mental Health </h1>
 
 <h2 id="crisis_hotlines"> Crisis Hotlines </h2> 
 
@@ -239,3 +248,20 @@
 </p>
 <b> *I'm not a therapist, please see a medical professional </b>
 
+<div style="border-style: solid; boder-width: 1%"></div
+
+<p style="text-align: center;">
+    Want to add something here? <br>
+    Let @Pongo | <code>worldwidelgbtresources@gmail.com</code> <br>
+    Technical difficulties? <br>
+    Let @Add | <code>add_gaming</code> know on Discord!
+</p>
+<p style="text-align: center;">
+    Disclaimer: <br>
+    This advice is based on our lived experience, we are not doctors/therapists/lawyers/experts.
+    Any products/companies we list don't reflect Trans Academy as a whole. 
+    Please use your own discretion and research with any advice listed. 
+    Always seek the advice of your qualified health care provider regarding any medical questions. 
+</p>
+    </body>
+</html>
