linked periods back up

--- a/index.html
+++ b/index.html
@@ -455,21 +455,31 @@
         </ol>
     </li>
     <li>
-        <h3 style="margin: 0px;">Periods</h3>
+        <h3 style="margin: 0px;">
+            <a href="./periods.html">
+                Periods
+            </a>
+        </h3>
         <ol type="A">
             <li>
                 <h4 style="margin: 0px;">
-                    Tracking apps
+                    <a href="./periods.html#period_tracking_apps">
+                        Tracking apps
+                    </a> 
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Info & support for afab folks
+                    <a href="./periods.html#trans_masc_periods">
+                        Info & support for afab folks
+                    </a> 
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Why every trans person needs an OBGYN
+                    <a href="./periods.html#trans_gynecology">
+                        Why every trans person needs an OBGYN
+                    </a> 
                 </h4>
             </li>
         </ol>
