--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h2> Chapters: </h2>
 <ol type="1">
     <li>
-        <h3> 
+        <h3 style="margin: 0px;"> 
             <a href="./mental_health.html">
                 Mental Health
             </a>
